--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -18,6 +18,9 @@
     width: 100%;
     @include hoverTransform;
     @include image;
+    z-index: 1;
+    position: relative;
+
 
     &-1 {
       background-image: url("../photos/events-1.png");
@@ -122,9 +125,12 @@
     @include onDesktop {
       margin: 0;
       min-height: 550px;
+      max-width: 1400px;
+      margin: 0 auto;
     }
 
     &--title {
+      justify-content: center;
       text-align: center;
 
       &::after {
@@ -147,7 +153,8 @@
 
     position: absolute;
     top: 154px;
-    min-width: 280px;
+    width: 80vw;
+    padding: 0 10px;
     min-height: 140px;
 
     @include onTablet {
