--- a/src/styles/blocks/menu-navigation.scss
+++ b/src/styles/blocks/menu-navigation.scss
@@ -3,6 +3,17 @@
   position: relative;
   z-index: 1;
 
+  &:target {
+    &::after {
+      content: "";
+      left: 0;
+      right: 0;
+      position: absolute;
+      height: 100vh;
+      background-color: rgba(0,0,0,.5);
+    }
+  }
+
   &--schedule {
     @include onTablet {
       padding: 0 20px 10px 30px;
