--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -5,7 +5,8 @@
 
   &__body {
     &--with-menu {
-      z-index: 1;
+      position: relative;
+      z-index: 99;
       overflow: hidden;
       background-color: #8b8b8c;
     }
