--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,125 +1,55 @@
-.gallery {
-  overflow: hidden;
+@import "../utils/carousel";
 
-  margin-top: 142px;
+.galery {
+  &__title {
+    margin-top: 183px;
 
-  @include onMobileAndTablet {
-    margin-top: 184px;
+    @include onTablet {
+      margin-top: 208px;
+    }
   }
 
   &__slider {
-    position: relative;
-    height: 439px;
+    margin-top: 40px;
 
     @include onTablet {
-      height: 584px;
-    }
-
-    @include onDesktop {
-      height: 990px;
-    }
-
-    &--slides {
-      position: absolute;
-      display: flex;
-      transition: 0.3s;
-
-      & > :not(:last-child) {
-        margin-right: 16px;
-      }
-
-      @include onTablet {
-        & > :not(:last-child) {
-          margin-right: 20px;
-        }
-      }
-
-      @include onDesktop {
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: 600px 360px;
-        column-gap: 30px;
-        row-gap: 30px;
-        width: 100%;
-
-        & > :not(:last-child) {
-          margin-right: 0;
-        }
-      }
-    }
-
-    &--item {
-      width: 280px;
-      height: 410px;
-
-      @include onTablet {
-        width: 340px;
-        height: 543px;
-      }
-
-      @include onDesktop {
-        width: 100%;
-        height: 100%;
-
-        &:nth-child(1) {
-          grid-column: 1/5;
-        }
-
-        &:nth-child(2) {
-          grid-column: 5/13;
-        }
-
-        &:nth-child(3) {
-          grid-column: 1/9;
-        }
-
-        &:nth-child(4) {
-          grid-column: 9/13;
-        }
-      }
-
-      &-image {
-        width: 100%;
-        height: 100%;
-        background-size: cover;
-        background-repeat: no-repeat;
-        object-fit: cover;
-
-        @include hoverTransform;
-      }
+      margin-top: 48px;
     }
   }
 
-  &-image {
+  &__desktop {
+    display: none;
+
+    @include onDesktop {
+      margin-top: 56px;
+      display: grid;
+      grid-template: auto auto / repeat(3, 1fr);
+      gap: 30px;
+    }
+  }
+
+  &__img {
     width: 100%;
     height: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    object-fit: cover;
-    @include hoverTransform;
-  }
 
-  &__bullets {
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-    margin-top: 20px;
-
-    @include onDesktop {
-      display: none;
+    &--1 {
+      grid-area: 1 / 1 / 2 / 2;
     }
 
-    &--bullet {
-      content: "";
-      margin: 0 15px;
-      height: 9px;
-      width: 9px;
-      border-radius: 50%;
-      background-color: #e0e0e0;
+    &--2 {
+      grid-area: 1 / 2 / 2 / 4;
+    }
 
-      &:first-child {
-        background-color: $green;
-      }
+    &--3 {
+      grid-area: 2 / 1 / 3 / 3;
+    }
+
+    &--4 {
+      grid-area: 2 / 3 / 3 / 4;
+    }
+
+    @include onDesktop {
+      @include hoverTransform;
     }
   }
 }
