--- a/src/styles/utils/_loader.scss
+++ b/src/styles/utils/_loader.scss
@@ -7,9 +7,9 @@
 }
 
 .spinner {
-  position: relative;
+  position: absolute;
   top: 50%;
-  transform: translate(0, -50%);
+  left: 45%;
   width: 80px;
   height: 80px;
   margin: 0 auto;
