not a full version

--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -2,8 +2,18 @@
   margin: 0;
   box-sizing: border-box;
   width: 100%;
-  padding-inline: $container-padding-inline;
+  padding-inline: 55px;
   padding-top: $container-padding-top;
   max-width: 1260px;
   margin-inline: auto;
+
+  @include onTablet {
+    padding-inline: 34px;
+  }
+
+  @include onMobile {
+    padding-top: $container-padding-top-mobile;
+    padding-inline: 20px;
+    min-width: 320px;
+  }
 }
