--- a/src/styles/blocks/museum-info.scss
+++ b/src/styles/blocks/museum-info.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   max-width: 370px;
   gap: 20px;
+  width: 50%;
 
   &__title {
     margin: 0;
@@ -36,6 +37,7 @@
 
       &--footer {
         color: $title-color;
+        text-decoration: none;
       }
     }
   }
