--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import "./blocks/nav.scss";
 @import "./blocks/museum-info.scss";
 @import "./blocks/section-title.scss";
+@import "./blocks/red-square.scss";
 @import "./blocks/events.scss";
 @import "./blocks/gallery.scss";
 @import "./blocks/follow.scss";
