--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -12,8 +12,12 @@ $secondary-font: "IBM Plex Sans", "Roboto", sans-serif;
 
 $button-hight: 70px;
 $button-title-width: 201px;
+$button-hight-mobile: 50px;
 
 $container-padding-top: 40px;
-$container-padding-inline: 55px;
+$container-padding-top-mobile: 27px;
 
 $effectDuration: 0.3s;
+
+$mobile-max-width: 576px;
+$tablet-max-width: 1024px;
