--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -7,8 +7,25 @@
   align-self: flex-end;
   text-decoration: none;
 
+  @include onTablet {
+    align-self: start;
+  }
+
+  @include onMobile {
+    height: $button-hight-mobile;
+    width: 100%;
+  }
+
   &--tickets {
     margin-top: 90px;
+
+    @include onTablet {
+      margin-top: 38px;
+    }
+
+    @include onMobile {
+      margin-top: 20px;
+    }
   }
 
   &__title {
@@ -22,6 +39,10 @@
     font-weight: 500;
     line-height: 100%;
 
+    @include onMobile {
+      width: 100%;
+    }
+
     &:hover {
       cursor: pointer;
     }
@@ -32,5 +53,9 @@
     background-size: 24px, 100%;
     width: $button-hight;
     height: 100%;
+
+    @include onMobile {
+      width: $button-hight-mobile;
+    }
   }
 }
