--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -2,7 +2,7 @@
   padding-bottom: 35px;
 
   &__content {
-    display: flex;
+    @include pageGrid;
   }
 
   &__logo {
@@ -16,11 +16,15 @@
     display: flex;
     flex-direction: column;
     gap: 60px;
-    margin-right: 130px;
+    grid-column: 1;
 
     &-sm {
       display: flex;
       gap: 22px;
+
+      @include onTablet {
+        gap: 32px;
+      }
     }
   }
 
@@ -28,6 +32,13 @@
     display: flex;
     gap: 30px;
     margin-right: 65px;
+    grid-column: 3 / 7;
+
+    @include onTablet {
+      margin-right: 0;
+      grid-column: 2 / 6;
+      margin-bottom: 64px;
+    }
   }
 
   &__rights {
@@ -35,13 +46,17 @@
     justify-content: space-between;
     margin-top: 87px;
 
+    @include onTablet {
+      margin-top: 120px;
+    }
+
     &-text {
       margin: 0;
       color: $title-color;
       font-family: $secondary-font;
       font-size: 12px;
       font-weight: 300;
-      line-height: 140.625%;
+      line-height: 140.63%;
     }
   }
 
