--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,9 +1,59 @@
 .nav {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;
   max-width: 370px;
   gap: 30px;
   height: fit-content;
+
+  @include onTablet {
+    max-width: none;
+    gap: 0;
+  }
+
+  &__left {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 50%;
+  }
+
+  &__right {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 50%;
+
+  }
+
+  &--footer {
+    position: relative;
+    grid-column: -6 / -2;
+
+    @include onTablet {
+      grid-column: 2 / 6;
+      padding-left: 0;
+      padding-top: 64px;
+      max-width: none;
+    }
+
+    &::before {
+      content: "";
+      width: 1px;
+      height: 260px;
+      background-color: rgba(26, 90, 76, 0.5);
+      left: -64px;
+      position: absolute;
+
+      @include onTablet {
+        width: 100%;
+        height: 1px;
+        top: 0;
+        left: 0;
+      }
+    }
+  }
 
   &__link {
     margin: 0;
@@ -13,27 +63,12 @@
     font-size: 22px;
     font-weight: 500;
     line-height: 100%;
-    width: 170px;
+    width: 100%;
 
     &--footer {
       color: $title-color;
       font-size: 14px;
       font-weight: 400;
-    }
-  }
-
-  &--footer {
-    position: relative;
-    gap: 20px;
-    padding-left: 65px;
-
-    &::before {
-      content: "";
-      width: 1px;
-      height: 260px;
-      background-color: rgba(26, 90, 76, 0.50);
-      left: 0;
-      position: absolute;
     }
   }
 }
