--- a/src/styles/blocks/section-title.scss
+++ b/src/styles/blocks/section-title.scss
@@ -7,9 +7,23 @@
   font-weight: 700;
   line-height: 100%;
 
+  @include onTablet {
+    margin-bottom: 48px;
+  }
+
+  @include onMobile {
+    font-size: 36px;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
   &--follow {
     color: $white-text-color;
     text-align: center;
     margin-bottom: 16px;
+
+    @include onMobile {
+      margin-bottom: 20px;
+    }
   }
 }
