--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -4,11 +4,14 @@
   background-size: cover;
   background-position: 50%;
   min-height: 386px;
-  margin-bottom: 10px;
   color: #fff;
+
+  max-width: 1400px;
+  margin: 70px auto 10px;
 
   &__title {
     padding: 88px 0 20px;
+
     @include onDesktop {
       text-align: center;
     }
