--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,7 +3,7 @@
   padding: 9px 0;
   height: 100%;
 
-  background-size: 320px 300px;
+  background-size: 100vw 96vw;
   background-repeat: no-repeat;
   background-position: right top;
   background-image: url(../photos/header-image.png);
@@ -26,7 +26,7 @@
     max-width: calc(50vw + 30px - 24px);
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 250px;
+    padding-bottom: 84vw;
 
     @include onTabletAndDesktop {
       max-width: calc(50vw + 24px);
