fix input style

--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -9,3 +9,11 @@ img {
   margin: 0;
   padding: 0;
 }
+
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  border: none;
+  border-radius: 0;
+}
