--- a/src/styles/utils/variable.scss
+++ b/src/styles/utils/variable.scss
@@ -3,6 +3,7 @@
   --color-black: #0f0e08;
   --color-grey: #687480;
   --color-grey-2: #4e4e4e;
+  --color-grey-3: #e0e0e0;
   --color-green: #1a5a4c;
   --color-orange: #f14a27;
   --transition-time: 0.4s;
