--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -77,6 +77,8 @@
     justify-content: space-between;
     min-width: 280px;
     cursor: pointer;
+
+    @include hover(letter-spacing, 2px);
     @include hoverTransform;
 
     @include onTablet {
@@ -146,6 +148,12 @@
     transform: rotate(-90deg) translate(-20px, -60px);
     transition: all 0.3s;
 
+    @include hover(color, #9eaab5);
+
+    @include onDesktop {
+      display: flex;
+    }
+
     &::before {
       content: "";
       display: block;
@@ -154,14 +162,6 @@
       margin-right: 20px;
       background-color: #1a5a4c;
       transform: translate(0, 7px);
-    }
-
-    @include onDesktop {
-      display: flex;
-    }
-
-    &:hover {
-      color: #9eaab5;
     }
   }
 }
