--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -63,8 +63,10 @@
 
   &__sqaure {
     position: absolute;
-    @include smallOrange;
     border: none;
+    cursor: pointer;
+    
+    @include smallOrange;
     @include hoverTransform;
 
     @include onTablet {
