--- a/src/styles/utils/_loader.scss
+++ b/src/styles/utils/_loader.scss
@@ -9,7 +9,8 @@
 .spinner {
   position: absolute;
   top: 50%;
-  left: 45%;
+  left: 46%;
+  transform: translate(-50%, -50%);
   width: 80px;
   height: 80px;
   margin: 0 auto;
@@ -18,6 +19,11 @@
   border-radius: 100%;
   -webkit-animation: sk-scaleout 1s infinite ease-in-out;
   animation: sk-scaleout 1s infinite ease-in-out;
+
+  @include onMobile {
+    top: 46%;
+    left: 40%;
+  }
 }
 
 @-webkit-keyframes sk-scaleout {
