--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -29,7 +29,8 @@
     padding-bottom: 84vw;
 
     @include onTabletAndDesktop {
-      max-width: calc(50vw + 24px);
+      width: calc(50vw + 24px);
+      max-width: 750px;
       padding-bottom: 40px;
     }
 
