add task solution

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   box-sizing: border-box;
+  // border: 1px solid red;
 }
 
 .page {
@@ -10,7 +11,7 @@
   font-size: 16px;
   line-height: 100%;
 
-  overflow-x: hidden;
+  // overflow-x: hidden;
 
   scroll-behavior: smooth;
 
@@ -34,7 +35,7 @@
       height: 100vh;
 
       .page__mask {
-        height: 100vw;
+        height: 100vh;
       }
     }
   }
@@ -63,15 +64,15 @@
   }
 
   &__main {
-    padding-inline: 20px;
+    // padding-inline: 20px;
     background-color: #fff;
 
     @include OnTablet {
-      padding-inline: 34px;
+      // padding-inline: 34px;
     }
 
     @include OnDeskTop {
-      padding-inline: 55px;
+      // padding-inline: 55px;
     }
   }
 }
