--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -29,6 +29,7 @@
 
   &__img {
     width: 100%;
+    padding-inline: 20px;
 
     @include OnTablet {
       display: none;
@@ -36,12 +37,14 @@
 
     &--3 {
       height: 210px;
-      width: 100vw;
+      width: 100%;
+      padding-inline: 0;
     }
   }
 
   &__img-med {
     width: 100%;
+    padding-inline: 34px;
 
     @include OnMobile {
       display: none;
@@ -71,7 +74,7 @@
     }
 
     &--3 {
-      width: 100vw;
+      width: 100%;
       height: 550px;
     }
   }
@@ -80,13 +83,16 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 60px;
+    padding-inline: 20px;
 
     @include OnTablet {
       margin-bottom: 0;
+      padding-inline: 34px;
     }
 
     @include OnDeskTop {
       width: 370px;
+      padding-inline: 0;
     }
 
     &--1 {
@@ -175,7 +181,7 @@
     display: flex;
     justify-content: center;
     position: relative;
-    width: 100;
+    width: 100%;
 
     @include OnTablet {
       width: 100%;
@@ -183,7 +189,7 @@
 
     @include OnDeskTop {
       align-self: center;
-      width: 100vw;
+      width: 100%;
     }
   }
 
