--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -20,10 +20,10 @@
     background-size: cover;
     background-position: center;
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: 100%;
 
-    margin-left: calc(50% - 50vw);
+    // margin-left: calc(50% - 50vw);
 
     @include OnTablet {
       background-image: url(/images/subscribe-img-tablet.png);
