add task solution

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -56,14 +56,27 @@
     background-position: center;
     width: 24px;
     height: 24px;
+    transition: transform 0.2s;
+
+    &:hover {
+      // border-radius: 5px;
+      // background-color: #3b5998;
+      transform: scale(1.1);
+    }
   }
 
   &__instagram-logo {
     background-image: url(/images/instagram-logo.png);
     background-repeat: no-repeat;
     background-position: center;
+    position: relative;
     width: 24px;
     height: 24px;
+    transition: transform 0.2s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__main-content {
