--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -51,16 +51,16 @@
 
     z-index: 2;
 
-    // transition: transform 0.6s;
-    // transform: scale(0);
-    // transform-origin: left;
+    transition: transform 0.6s ease-in;
+    transform: scale(0);
+    transform-origin: left;
   }
 
   &__menu:target {
     opacity: 1;
     pointer-events: all;
 
-    // transform: scale(1);
+    transform: scale(1);
   }
 
   &__main {
