--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -71,6 +71,16 @@
       }
     }
 
+    &--tablet {
+      display: none;
+      @include onTablet {
+        display: block;
+      }
+      @include onDesktop {
+        display: none;
+      }
+    }
+
     @include onDesktop {
       grid-column: span 4;
     }
