--- a/src/styles/utils/vars.scss
+++ b/src/styles/utils/vars.scss
@@ -5,6 +5,7 @@ $secondary-color: #1a5a4c;
 $events-type-color: #687480;
 $gallery-elements-color: #e0e0e0;
 $transparency-bg-color: #000;
+$menu-overlay-color: #00000080;
 $half-transparent: 0.5;
 
 $tablet-min-width: 640px;
