--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,12 +1,22 @@
 .menu {
-  height: auto;
   padding-block: $mobile-menu-paddings;
-
   color: $main-bg-color;
-  background-color: $secondary-color;
+  height: 100vh;
+  background: linear-gradient(180deg,$secondary-color 0,$secondary-color 50%,
+  $menu-overlay-color 0,$menu-overlay-color);
+  overflow: hidden;
 
   @include onTablet {
     padding-block: $tablet-menu-paddings;
+    background: linear-gradient(180deg,$secondary-color 0,
+    $secondary-color 225px,
+    $menu-overlay-color 0,$menu-overlay-color);
+  }
+
+  @include onDesktop {
+    background: linear-gradient(180deg,$secondary-color 0,
+    $secondary-color 234px,
+    $menu-overlay-color 0,$menu-overlay-color);
   }
 
   &__content {
