--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
 @import "utils";
-@import "fonts";
 @import "typography";
+@import "./blocks/header.scss";
+@import "./blocks/page.scss";
+@import "./blocks/top-bar.scss";
+@import "./elements/icons.scss";
+@import "./blocks/constainer.scss";
+@import "./blocks/events.scss";
+@import "./blocks/sections.scss";
 
-body {
-  background: $c-gray;
+body,
+a,
+h1,
+h2,
+h3 {
+  @include reset;
 }
