--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import './_reset';
 
-body {
-  background: $c-gray;
-}
+@import "_utils";
+
+@import "./blocks/page.scss";
+@import "./blocks/container.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/information.scss";
+@import "./blocks/header.scss";
+@import "./blocks/tickets.scss";
+@import "./blocks/actuals.scss";
+@import "./blocks/article.scss";
+@import "./blocks/event.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/back-to-top.scss";
