--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
-$c-gray: #eee;
+$main-text-color: #0f0e08;
+$titles-text-color: #687480;
+$main-color: #1a5a4c;
+$description-text-color: #4e4e4e;
+$accent-color: #f14a27;
+
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
