links now opens  at new tabs

--- a/src/styles/blocks/article.scss
+++ b/src/styles/blocks/article.scss
@@ -58,7 +58,7 @@
   }
 
   &__type {
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
@@ -71,7 +71,7 @@
   }
 
   &__date {
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 700;
     font-size: 16px;
     line-height: 150%;
@@ -87,7 +87,7 @@
     display: flex;
     align-items: center;
 
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 28px;
     line-height: 100%;
@@ -125,7 +125,7 @@
   }
 
   &__description {
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 300;
     font-size: 16px;
     line-height: 150%;
