--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -18,7 +18,7 @@
   &__description {
     box-sizing: border-box;
     background: #fff;
-    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
     margin: 0 20px;
     padding: 20px 0;
     transform: translateY(-60px);
@@ -56,7 +56,7 @@
   }
 
   &__type {
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
@@ -69,7 +69,7 @@
   }
 
   &__date {
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 700;
     font-size: 16px;
     line-height: 150%;
@@ -82,7 +82,7 @@
   }
 
   &__title {
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 28px;
     line-height: 100%;
