--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -105,7 +105,7 @@
   }
 
   &__schedule {
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 150%;
@@ -120,7 +120,7 @@
   &__contacts {
     grid-column: 2;
 
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 150%;
@@ -162,7 +162,7 @@
 
   &__line {
     display: none;
-    content: '';
+    content: "";
     width: 1px;
     height: 260px;
     background-color: $main-color;
@@ -193,7 +193,7 @@
   &__link {
     text-decoration: none;
     color: rgba(15, 14, 8, 1);
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 100%;
@@ -207,7 +207,7 @@
     gap: 10px;
 
     &-info {
-      font-family: "IBM Plex Sans";
+      font-family: "IBM Plex Sans", sans-serif;
       font-weight: 300;
       font-size: 12px;
       line-height: 140.62%;
