--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -97,7 +97,7 @@
   }
 
   &__title {
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 45px;
     line-height: 100%;
