--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -26,7 +26,7 @@
   }
 
   &__title {
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 36px;
     line-height: 100%;
@@ -48,7 +48,7 @@
   }
 
   &__description {
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 400;
     font-size: 18px;
     line-height: 150%;
@@ -93,7 +93,7 @@
 
     flex-grow: 1;
 
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 100%;
