--- a/src/styles/blocks/actuals.scss
+++ b/src/styles/blocks/actuals.scss
@@ -2,7 +2,7 @@
   &__title {
     margin-bottom: 40px;
 
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 36px;
     line-height: 100%;
