--- a/src/styles/blocks/information.scss
+++ b/src/styles/blocks/information.scss
@@ -2,8 +2,9 @@
   color: #fff;
 
   &__title {
-    margin-bottom: 20px;color: #FFF;
-    font-family: "IBM Plex Sans";
+    margin-bottom: 20px;
+    color: #fff;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 140%;
@@ -21,16 +22,16 @@
   }
 
   &__working-hours {
-    color: #FFF;
-    font-family: "IBM Plex Sans";
+    color: #fff;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 150%;
   }
 
   &__days-off {
-    color: #FFF;
-    font-family: "IBM Plex Sans";
+    color: #fff;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 150%;
