--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -2,7 +2,6 @@
   height: 100vh;
   background-color: rgba(24, 24, 26, 0.5);
 
-
   &__wrapper {
     background-color: $main-color;
     padding: 27px 0;
@@ -63,8 +62,8 @@
   &__link {
     height: 16px;
     text-decoration: none;
-    color: #FFF;
-    font-family: "IBM Plex Sans";
+    color: #fff;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 100%;
