responsiveness was fixed

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -44,13 +44,13 @@
     justify-items: center;
 
     @include onTablet {
+      padding-top: 15px;
       margin-bottom: 40px;
       grid-template-columns: repeat(6, 1fr);
       column-gap: 20px;
     }
 
     @include onDesktop {
-      padding-top: 15px;
       grid-column: 1 / -1;
       grid-template-columns: repeat(12, 1fr);
       column-gap: 30px;
@@ -133,6 +133,7 @@
       display: block;
 
       width: min-content;
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 14px;
       font-weight: 700;
       text-align: left;
