--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -60,7 +60,7 @@
   }
 
   &__link {
-    height: 16px;
+    height: max-content;
     text-decoration: none;
     color: #fff;
     font-family: "IBM Plex Sans", sans-serif;
