--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
-$c-gray: #eee;
+$fontColorDark: #000;
+$fontColorDark--2: #0f0e08;
+
+$font-family--1: 'Montserrat', sans-serif;
+$font-family--2: 'IBM Plex Sans', sans-serif;
+
+$tablet-width: 768px;
+$desktop-width: 1280px;
