Museum last commit

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -27,6 +27,16 @@
       flex-shrink: 1;
       max-width: 80px;
     }
+    
+  }
+
+  &__facebook,
+  &__inst {
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(115%);
+    }
   }
 
   &__content {
@@ -116,8 +126,14 @@
     margin-bottom: 20px;
     text-decoration: none;
 
+    transition: 0.3s;
+
     &:last-child {
       margin-bottom: 0;
+    }
+
+    &:hover {
+      text-shadow: 1px 1px 3px $colorMidBlack;
     }
   }
 
