--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -68,6 +68,12 @@
     font-weight: 500;
     font-size: 16px;
     color: #fff;
+
+    transition: 0.3s;
+
+    &:hover {
+      text-shadow: 1px 1px 3px #fff;
+    }
   }
 
   &__line {
