--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -9,11 +9,12 @@
 
   @include onTablet {
     padding-inline: 34px;
+    max-width: 768px;
   }
 
   @include onMobile {
     padding-top: $container-padding-top-mobile;
     padding-inline: 20px;
-    min-width: 320px;
+    width: 320px;
   }
 }
