--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -8,7 +8,6 @@
     margin-bottom: 160px;
     height: 616px;
 
-
     @include pageGrid;
 
     @include onTablet {
@@ -17,9 +16,9 @@
     }
 
     @include onMobile {
-    height: auto;
-    margin-bottom: 30px;
-    grid-template-rows: repeat(2, 1fr);
+      height: fit-content;
+      margin-bottom: 40px;
+      grid-template-rows: 3fr 2fr;
     }
   }
 
@@ -37,6 +36,7 @@
     @include onMobile {
       grid-column: span 2;
       grid-row: 2;
+      height: fit-content;
     }
   }
 
@@ -58,10 +58,11 @@
       color: $event-link-color;
       font-family: $secondary-font;
       font-size: 14px;
-      font-style: normal;
       font-weight: 700;
       line-height: 100%;
       text-decoration: none;
+
+      @include hover(color, $main-green);
     }
 
     &-line {
@@ -104,9 +105,9 @@
     margin-right: calc(-50vw + 87%);
     grid-column: span 7;
 
-    @include onTablet{
+    @include onTablet {
       grid-column: span 3;
-      margin-right: calc(-30vw + 59%);
+      margin-right: calc(-30vw + 30%);
     }
 
     @include onMobile {
@@ -131,6 +132,9 @@
     font-size: 36px;
     font-weight: 700;
     line-height: 100%;
+    text-decoration: none;
+
+    @include hover(transform, scale(1.05));
 
     @include onTablet {
       width: 220px;
