--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -2,6 +2,8 @@
   height: 24px;
   width: 24px;
 
+  @include hover (transform, scale(1.2));
+
   &--menu {
     position: absolute;
     background-image: url(../images/icons/burger-menu.png);
