--- a/src/styles/blocks/red-square.scss
+++ b/src/styles/blocks/red-square.scss
@@ -3,4 +3,9 @@
   width: 15px;
   background-image: url(../images/icons/icon-red-square.png);
   background-size: cover;
+
+  @include onMobile {
+    height: 10px;
+    width: 10px;
+  }
 }
