--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,5 +14,6 @@
 @import "./blocks/red-square.scss";
 @import "./blocks/events.scss";
 @import "./blocks/gallery.scss";
+@import "./blocks/scroll.scss";
 @import "./blocks/follow.scss";
 @import "./blocks/footer.scss";
