--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -6,6 +6,7 @@ $secodary-text-color: #4e4e4e;
 $event-link-color: #687480;
 $white-text-color: #fff;
 $follow-button-color: #f14a27;
+$scroll-color: #e0e0e0;
 
 $title-font: "Montserrat", "Roboto", sans-serif;
 $secondary-font: "IBM Plex Sans", "Roboto", sans-serif;
@@ -19,5 +20,5 @@ $container-padding-top-mobile: 27px;
 
 $effectDuration: 0.3s;
 
-$mobile-max-width: 576px;
-$tablet-max-width: 1024px;
+$mobile-max-width: 639px;
+$tablet-max-width: 1279px;
