--- a/src/styles/blocks/follow.scss
+++ b/src/styles/blocks/follow.scss
@@ -1,3 +1,16 @@
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-text-fill-color: $follow-button-color;
+  transition: all $effectDuration;
+}
+
 .follow {
   background-image: url(../images/bg-follow.png);
   background-size: cover;
@@ -5,10 +18,17 @@
   height: 550px;
   margin-inline: calc(-50vw + 50%);
   margin-top: 200px;
+  display: flex;
   justify-content: center;
 
   @include onTablet {
-    @include pageGrid;
+    margin-top: 92px;
+    height: 380px;
+  }
+
+  @include onMobile {
+    margin-top: 100px;
+    height: 386px;
   }
 
   &__content {
@@ -17,8 +37,8 @@
     flex-direction: column;
     justify-content: center;
 
-    @include onTablet {
-      grid-column: 2 / -2;
+    @include onMobile {
+      width: 280px;
     }
   }
 
@@ -31,26 +51,49 @@
     font-weight: 400;
     line-height: 100%;
     margin-bottom: 72px;
+
+    @include onTablet {
+      margin-bottom: 64px;
+    }
+
+    @include onMobile {
+      margin-bottom: 50px;
+      line-height: 150%;
+    }
   }
 
-  &__form {
-    @include pageGrid;
+  &__form-wrapper {
+    box-sizing: border-box;
+    display: flex;
+    gap: 30px;
+    width: 100%;
+    justify-content: center;
 
     @include onTablet {
       display: flex;
       gap: 16px;
     }
+
+    @include onMobile {
+      gap: 0;
+    }
   }
 
   &__input {
     box-sizing: border-box;
-    height: 70px;
+    height: $button-hight;
     border: 0;
-    grid-column: 4 / 9;
+    width: 470px;
     padding-left: 32px;
+    outline: none;
 
     @include onTablet {
-      width: 100%;
+      width: 374px;
+    }
+
+    @include onMobile {
+      height: $button-hight-mobile;
+      width: 230px;
     }
 
     &::placeholder {
@@ -68,10 +111,15 @@
     border: 0;
     width: $button-hight;
     padding: 0;
-    grid-column: 9;
 
-    @include onTablet {
-      width: $button-hight;
+    @include hover(cursor, pointer);
+
+    &:active {
+      transform: scale(0.95);
+    }
+
+    @include onMobile {
+      width: $button-hight-mobile;
     }
   }
 }
