--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -10,6 +10,8 @@
     background-size: contain;
     height: 72px;
     width: 63px;
+
+    @include hover(transform, scale(1.1));
   }
 
   &__icons {
@@ -17,6 +19,14 @@
     flex-direction: column;
     gap: 60px;
     grid-column: 1;
+
+    @include onMobile {
+      grid-column: span 2;
+      flex-direction: row;
+      justify-content: space-between;
+      margin-bottom: 40px;
+      align-items: center;
+    }
 
     &-sm {
       display: flex;
@@ -39,6 +49,32 @@
       grid-column: 2 / 6;
       margin-bottom: 64px;
     }
+
+    @include onMobile {
+      grid-column: span 2;
+      gap: 20px;
+      margin-bottom: 0;
+    }
+  }
+
+  &__up {
+    display: none;
+
+    @include onMobile {
+      display: flex;
+      justify-content: flex-end;
+      grid-column: span 2;
+      margin-bottom: 20px;
+
+      &-button {
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+        border: 1px solid $main-green;
+        text-decoration: none;
+        background: url(../images/icons/icon-arrow-up.png) no-repeat center;
+      }
+    }
   }
 
   &__rights {
@@ -50,6 +86,10 @@
       margin-top: 120px;
     }
 
+    @include onMobile {
+      flex-direction: column-reverse;
+      text-align: center;
+    }
     &-text {
       margin: 0;
       color: $title-color;
