--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -7,6 +7,13 @@
     flex-direction: row;
     padding-bottom: 48px;
     height: fit-content;
+    justify-content: space-between;
+
+    @include onMobile {
+      flex-direction: column;
+      gap: 24px;
+      padding-bottom: 27px;
+    }
   }
 
   &__block {
@@ -14,8 +21,16 @@
     width: 50%;
     justify-content: center;
 
+    @include onTablet {
+      width: fit-content;
+    }
+
     &--museum-info {
       position: relative;
+
+      @include onTablet {
+        padding-left: 38px;
+      }
 
       &::before {
         content: "";
@@ -24,6 +39,17 @@
         background-color: $white-text-color;
         left: 0;
         position: absolute;
+
+        @include onMobile {
+          width: 100%;
+          height: 1px;
+          top: 0;
+        }
+      }
+
+      @include onMobile {
+        padding-left: 0;
+        padding-top: 24px;
       }
     }
   }
