--- a/src/styles/blocks/museum-info.scss
+++ b/src/styles/blocks/museum-info.scss
@@ -3,7 +3,14 @@
   flex-direction: column;
   max-width: 370px;
   gap: 20px;
-  width: 50%;
+
+  &--footer {
+    width: 50%;
+
+    @include onMobile {
+      width: 100%;
+    }
+  }
 
   &__title {
     margin: 0;
@@ -22,6 +29,11 @@
     display: flex;
     gap: 30px;
 
+    @include onMobile {
+      flex-direction: column;
+      gap: 16px;
+    }
+
     &--footer {
       flex-direction: column;
     }
@@ -35,9 +47,23 @@
       line-height: 150%;
       width: 170px;
 
+      &--we {
+        @include onMobile {
+          width: 100%;
+        }
+      }
+
       &--footer {
         color: $title-color;
         text-decoration: none;
+
+        @include onMobile {
+          width: 100%;
+        }
+
+        &-hover {
+          @include hover(color, $main-green);
+        }
       }
     }
   }
