--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -7,24 +7,39 @@
 
   @include onTablet {
     max-width: none;
-    gap: 0;
+    gap: 20px;
+    margin-left: 62px;
   }
 
-  &__left {
+  @include onMobile {
+    margin-left: 52px;
+    gap: 28px;
+  }
+
+  &__colomn {
     margin: 0;
     display: flex;
     flex-direction: column;
     gap: 30px;
     width: 50%;
-  }
 
-  &__right {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    width: 50%;
+    @include onTablet {
+      width: 100px;
+    }
 
+    @include onMobile {
+      gap: 24px;
+    }
+
+    &--footer {
+      @include onTablet {
+        width: 50%;
+      }
+
+      @include onMobile {
+        width: 100%;
+      }
+    }
   }
 
   &--footer {
@@ -36,6 +51,14 @@
       padding-left: 0;
       padding-top: 64px;
       max-width: none;
+      gap: 0;
+      margin-left: 0;
+    }
+
+    @include onMobile {
+      grid-column: span 2;
+      padding-top: 40px;
+      gap: 20px;
     }
 
     &::before {
@@ -65,10 +88,19 @@
     line-height: 100%;
     width: 100%;
 
+    @include hover(text-shadow, -1px -0.5px 0.5px $white-text-color);
+
+    @include onTablet {
+      font-size: 16px;
+    }
+
     &--footer {
       color: $title-color;
       font-size: 14px;
       font-weight: 400;
+
+      @include hover(color, $main-green);
+      @include hover(font-weight, 500);
     }
   }
 }
