fix my errors whith button and tel/fax tags

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -43,6 +43,8 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 100%;
+    text-align: center;
+    align-self: center;
 
     @include onMobile {
       width: 100%;
