--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -16,6 +16,8 @@
     color: var(--color-black);
 
     a {
+      transition: color var(--transition-time);
+
       &:hover {
         color: var(--color-green);
         text-decoration: underline;
