--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -64,7 +64,7 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--color-white);
+  background-color: var(--color-green);
   transition: opacity var(--transition-time), visibility var(--transition-time);
 }
 
@@ -311,6 +311,15 @@ h3,
 
     &:last-child {
       margin-right: 0;
+    }
+
+    &:-webkit-autofill,
+    &:-webkit-autofill:hover,
+    &:-webkit-autofill:focus,
+    &:-webkit-autofill:active {
+      -webkit-text-fill-color: var(--color-black);
+      -webkit-box-shadow: 0 0 0 1000px transparent inset;
+      -webkit-transition: background-color 5000s ease-in-out 0s;
     }
 
     @include max-laptop {
