--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
-$c-gray: #eee;
+$tablet-min-width: 576px;
+$desktop-min-width: 1024px;
+
+$effectDuration: 0.3s;
+
+$main-dark-color: #333;
+$main-bg-color: #e4dfd3;
+$main-color-title: #344f10;
+$gray-color: #828282;
+$footer-bgc: #8c9772;
