--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,20 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/vars";
+@import "utils/mixins";
+// @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/page.scss";
+@import "blocks/header.scss";
+@import "blocks/top-bar.scss";
+@import "blocks/button.scss";
+@import "blocks/menu.scss";
+@import "blocks/nav.scss";
+@import "blocks/action.scss";
+@import "blocks/about.scss";
+@import "blocks/shop.scss";
+@import "blocks/product.scss";
+@import "blocks/about-creators.scss";
+@import "blocks/ingredients.scss";
+@import "blocks/pros.scss";
+@import "blocks/contact.scss";
+@import "blocks/form.scss";
+@import "blocks/footer.scss";
