--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -32,7 +32,7 @@
 
   &__link {
     position: relative;
-    display: block;
+    display: inline;
     color: $main-bg-color;
     text-decoration: none;
     font-size: 18px;
@@ -41,6 +41,8 @@
     &::after {
       content: "";
       position: absolute;
+      left: 0;
+      right: 0;
       bottom: -10px;
       display: block;
       height: 1px;
