fixed hover effect for product img

--- a/src/styles/blocks/product.scss
+++ b/src/styles/blocks/product.scss
@@ -1,6 +1,6 @@
 .product {
   margin-bottom: 30px;
-  @include hover(transform, scale(1.1));
+  overflow: hidden;
 
   @include onTablet {
     margin-bottom: 50px;
@@ -22,6 +22,7 @@
   &__img {
     width: 100vw;
     margin-bottom: 20px;
+    @include hover(transform, scale(1.2));
 
     @include onTablet {
       width: 100%;
