fixed hover effect in product img

--- a/src/styles/blocks/product.scss
+++ b/src/styles/blocks/product.scss
@@ -1,6 +1,5 @@
 .product {
   margin-bottom: 30px;
-  overflow: hidden;
 
   @include onTablet {
     margin-bottom: 50px;
@@ -17,6 +16,10 @@
     @include onTablet {
       display: block;
     }
+  }
+
+  &__wrap-img {
+    overflow: hidden;
   }
 
   &__img {
